--- a/ScienceResearchApp.xcodeproj/xcshareddata/xcschemes/ScienceResearchApp.xcscheme
+++ b/ScienceResearchApp.xcodeproj/xcshareddata/xcschemes/ScienceResearchApp.xcscheme
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
    LastUpgradeVersion = "1250"
-   version = "1.3">
+   version = "1.7">
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
@@ -14,10 +14,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "E5B4BBC6DD552AC8943C7E22772FC1D3"
-               BuildableName = "GoogleMaps"
-               BlueprintName = "GoogleMaps"
-               ReferencedContainer = "container:Pods.xcodeproj">
+               BlueprintIdentifier = "C3361DF2268E5A570058B829"
+               BuildableName = "ScienceResearchApp.app"
+               BlueprintName = "ScienceResearchApp"
+               ReferencedContainer = "container:ScienceResearchApp.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -40,6 +40,20 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "C3361DF2268E5A570058B829"
+            BuildableName = "ScienceResearchApp.app"
+            BlueprintName = "ScienceResearchApp"
+            ReferencedContainer = "container:ScienceResearchApp.xcodeproj">
+         </BuildableReference>
+      </BuildableProductRunnable>
+      <LocationScenarioReference
+         identifier = "London, England"
+         referenceType = "1">
+      </LocationScenarioReference>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -47,6 +61,16 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "C3361DF2268E5A570058B829"
+            BuildableName = "ScienceResearchApp.app"
+            BlueprintName = "ScienceResearchApp"
+            ReferencedContainer = "container:ScienceResearchApp.xcodeproj">
+         </BuildableReference>
+      </BuildableProductRunnable>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
